src/tests/fail/stanza_handler_too_short.stderr
error[E0597]: `handler` does not live long enough
  --> $DIR/stanza_handler_too_short.rs:8:20
   |
8  |         conn.handler_add(&handler, None, None, None);
   |                          ^^^^^^^^ borrowed value does not live long enough
9  |         conn
   |         ---- a temporary with access to the borrow is created here ...
10 |     };
   |     -- ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `libstrophe::connection::Connection`
   |     |
   |     `handler` dropped here while still borrowed
   |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
   |
9  |         conn;
   |             ^
